--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,10 +20,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        git config --local user.name "githubVladimirT"
-        git config --local user.email "vladimir.tolstov@selfip.ru"
-        git pull
-        rm pylint.json
-        pylint `ls -R|grep .py$|xargs` >> pylint.json
-        git commit -am "Add pylint.json"
-        git push
+        pylint `ls -R|grep .py$|xargs`
