Changed logging algorithm
Signed-off-by: githubVladimirT <vladimir.tolstov@selfip.ru>

--- a/config.cfg
+++ b/config.cfg
@@ -10,7 +10,7 @@ anim_speed=0.0003
 # Frames per second (type:int)
 fps=60
 # Pulsing (type:bool)
-pulsing=True
+pulsing=false
 
 [COLORS]
 # Color mode (mono/multi)
