--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
-    - name: Compiling code with pyinstaller
+        pip install pylint
+    - name: Pylint check project
       run: |
-        pyinstaller --onefile master.py --target-arch=universal2 -n cardioid_arch_universal --clean 
+        pylint $(git ls-files '*.py')
