--- a/config.cfg
+++ b/config.cfg
@@ -2,7 +2,7 @@
 # Screen resolution in pixels (type:int) x, y
 # screen_res=1366, 768
 # Radius of cardioid (type:int)
-radius=300
+radius=500
 # Number of lines (type:int)
 num_lines=200
 # Animation speed (in sec) (type:float) //0.0001
@@ -26,4 +26,4 @@ multi_color_2=black
 
 [MUSIC]
 # Path to music file (type:none/string) for example: "/home/user/Music/example.mp3"
-music_path=none
+music_path=./assets/music/Miracle of Sound — valhalla calling.mp3
