--- a/.pylintrc
+++ b/.pylintrc
@@ -78,24 +78,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
-        E1101,
-        W0105,
-	  R0912,
-        C0116,
-        C0115,
-        R1702,
-        R1714,
-        W0604,
-        E0601,
-        R1710
+disable=C
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
