--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [SYSTEM]
 # Radius of cardioid (type:int)
-radius=500
+radius=400
 # Number of lines (type:int)
 num_lines=200
 # Animation speed (in sec) (type:float) //0.0001
@@ -24,4 +24,4 @@ multi_color_2=black
 
 [MUSIC]
 # Path to music file (type:none/string) for example: "/home/user/Music/example.mp3"
-music_path=./assets/music/Miracle of Sound — valhalla calling.mp3
+music_path=none
